2011-08-12  Valek Filippov

		* Moved libgsf parts to ctypes, no more dependency on python bindings to libgsf.
		* VBA: [MS-OVBA] seems to be incorrect about CompressedChunkHeader
		* Add simple +- to entry for address
		* OLE: Workaround for semi-broken files

2011-08-11  Valek Filippov

		* VBA: fix inflate_vba
		* VSD: put back names for stencil streams
		* Added "#" to entry to go to offset at hexdump

2011-08-10  Valek Filippov

		* VBA: decompress all modules

2011-08-09  Valek Filippov

		* VBA: initial parsing of VBA streams (in VSD), compression ported from libgsf, have to be fixed

2011-08-08  Valek Filippov

		* VSD: save all streams, "hdr"/"trailer" parts of 0x5* are ignored for now.

2011-08-07  Valek Filippov

		* VSD: start to implement saving
		* VSD: add "header" and piece after pointer to trailer
		* VSD: cheat to parse StencilPG header (only PatternFlags are interesting)

2011-08-06  Valek Filippov

		* XLS: fontname in v8 is utf-16.

2011-08-05  Valek Filippov

		* VSD: reordered text/line/fill styles based on Tibby Lickle report
		* XLS: group records in BOF/EOF brackets, add substream type

2011-08-03  Valek Filippov

		* XLS: Initial support
		* XLS: parse Font record
		* PPT: Initial support

2011-08-02  Valek Filippov

		* EMF: re-pack EMF+ changes back to parent
		* EMF: 9 more record parsed
		* Added "utxt" format
		* Initial support for CLP files, saving of parts into files.

2011-08-01  Valek Filippov

		* MF: gen_tree fix, init EMF+ crafting 
		* MF: fix saving of EMFs, more EMF+ crafting
		* MF: EFM+ initial obj crafting
		* EMF: parse public comment Begin/EndGroup

2011-07-31  Valek Filippov

		* EMF: more EMF+ records parsing

2011-07-30  Valek Filippov

		* EMF: Start to parse EMF+ records.
		* EMF: Parse EMF+ objects and some records.

2011-07-23  Valek Filippov

		* VSD: Some chunks/streams renaming in Fonts, mark 'Background' pages as 'Page BG',